(library
 (name llvm__2)
 (libraries stdio ocamlgraph unix str tigermain)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test landmarks-ppx --auto)))

(ocamllex lllexer lllexerstrip)

(menhir
 (merge_into llparser)
 (modules llparser)
 (flags --explain))

(menhir
 (merge_into llparserstrip)
 (modules llparserstrip)
 (flags --explain))
